project('l4', 'c')

make_command = find_program('make', required: true)
make__output = run_command(make_command, capture: true, check: true).stdout().strip()
message(make_nft_output)
# sudo apt update
# sudo apt-install --assume-yes make build-essential
# sudo apt install --assume-yes software-properties-common
# sudo apt-get install --assume-yes python3 python3-pip python3-setuptools python3-wheel ninja-build
# sudo add-apt-repository ppa:deadsnakes/ppa
# sudo apt update
# sudo apt install --assume-yes python3.8